--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jp.gr.java_conf.bufferings</groupId>
   <artifactId>thymeleaf3-spring-boot</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
   <name>Temporary Spring Boot Thymeleaf3 Starter</name>
   <description>A temporary starter for Thymeleaf3 until the official release.</description>
